--- a/web/detailsCustomer.xhtml
+++ b/web/detailsCustomer.xhtml
@@ -7,7 +7,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h1>Détail du client</h1>
+        <h1>#{msg.titre_cli_edi}</h1>
 
         <p>Numéro:
             <h:outputText id="custNumero" value="#{detailCustomerBean.customer.number}"/>
